<resources>
    <string name="app_name">Foodie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_title">Kullanıcı Adı veya Email</string>
    <string name="password_title">Şifre</string>
    <string name="login_button_text">Giriş Yapın</string>
    <string name="sign_up_click_text">Bir hesabın yok mu? Hesap Oluştur!</string>
    <string name="progress_bar_text">Giriş Yapılıyor…</string>
    <string name="email_title">Email</string>
    <string name="username_title">Kullanıcı Adı</string>
    <string name="sign_up_button_text">Hesap Oluştur</string>
    <string name="login_click_text">Bir hesabın var mı? Giriş Yap!</string>
    <string name="buttom_nav_home">Anasayfa</string>
    <string name="buttom_nav_favorites">Favorilerim</string>
    <string name="buttom_nav_cart">Sepetim</string>
    <string name="buttom_nav_account">Hesabım</string>
    <string name="header_name">Merhaba, %1$s</string>
    <string name="header_text">Hadi yemeğini alalım!</string>
    <string name="food_card_title">Size Özel Yemekler</string>
    <string name="discount_text">%10 İndirimli</string>
    <string name="cargo_text">Ücretsiz Teslimat</string>
    <string name="time_text">15–20 Dakika</string>
    <string name="favorite_discount_text">-10%</string>
    <string name="cart_button_text">Sepete Ekle</string>
    <string name="cart_cargo_text">15 Dakika İçinde Kuryeye Teslim</string>
    <string name="cart_total_title">Toplam</string>
    <string name="cart_total_cargo">Kargo Ücretsiz</string>
    <string name="cart_total_button">Sepeti Onayla</string>
    <string name="cart_no_data">Sepetinizde ürün bulunmamaktadır.</string>
    <string name="update_account_button">Güncelle</string>
    <string name="product_detail_title">Ürün Detayı</string>
    <string name="product_detail_star">4.4 (289)</string>
    <string name="order_text">Siparişiniz Alındı</string>
</resources>