<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_page"
    tools:context=".ui.fragment.CartFragment">

    <TextView
        android:id="@+id/tvCartTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_page_title"
        android:padding="15dp"
        android:text="@string/buttom_nav_cart"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/page_title"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCartCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCartTitle" />

    <LinearLayout
        android:id="@+id/linearLayoutTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_cart_total"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvCartTotalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cart_total_title"
                android:textColor="@color/black"
                android:textSize="@dimen/cart_total_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCartTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/cart_total"
                android:textSize="@dimen/cart_total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCartTotalTitle" />

            <TextView
                android:id="@+id/tvCartTotalCargo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cart_total_cargo"
                android:textColor="@color/cart_total_cargo"
                android:textSize="@dimen/cart_total_cargo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCartTotal"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/buttonCartTotal"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_cart_button"
                android:paddingStart="60dp"
                android:paddingEnd="60dp"
                android:text="@string/cart_total_button"
                android:textColor="@color/white"
                android:textSize="@dimen/cart_total_button"
                android:textStyle="bold"
                app:backgroundTint="@color/cart_total"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivCartNoData"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:src="@drawable/vc_cart"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCartTitle"
        app:tint="@color/cart_total"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/tvCartNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cart_no_data"
        android:textColor="@color/black"
        android:textSize="@dimen/cart_no_data"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCartNoData" />
</androidx.constraintlayout.widget.ConstraintLayout>