<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginFragment"
            type="com.example.foodie.ui.fragment.LoginFragment" />

        <variable
            name="loginStatus"
            type="String" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_page"
        tools:context=".ui.fragment.LoginFragment">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher"
            android:visibility='@{loginStatus == "loading" ? View.GONE : loginStatus == "login" ? View.GONE: View.VISIBLE}'
            app:layout_constraintEnd_toStartOf="@+id/tvLogin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/app_name_text"
            android:visibility='@{loginStatus == "loading" ? View.GONE : loginStatus == "login" ? View.GONE: View.VISIBLE}'
            app:layout_constraintBottom_toBottomOf="@+id/ivLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivLogin"
            app:layout_constraintTop_toTopOf="@+id/ivLogin" />

        <TextView
            android:id="@+id/tvAccountLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:text="@string/account_title"
            android:textColor="@color/login_title"
            android:textSize="@dimen/login_title"
            android:visibility='@{loginStatus == "loading" ? View.GONE : loginStatus == "login" ? View.GONE: View.VISIBLE}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogin"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/accountLoginLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_bottom_unselected"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:visibility='@{loginStatus == "loading" ? View.GONE : loginStatus == "login" ? View.GONE: View.VISIBLE}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAccountLogin">

            <ImageView
                android:id="@+id/ivAccountLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/account_title"
                app:srcCompat="@drawable/vc_account" />

            <EditText
                android:id="@+id/editTextAccountLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="Kullanıcı adı veya email giriniz"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="@dimen/edit_text_login"
                tools:ignore="Autofill,HardcodedText,TextContrastCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPasswordLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:text="@string/password_title"
            android:textColor="@color/login_title"
            android:textSize="@dimen/login_title"
            android:visibility='@{loginStatus == "loading" ? View.GONE : loginStatus == "login" ? View.GONE: View.VISIBLE}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountLoginLayout"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/passwordLoginLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_bottom_unselected"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:visibility='@{loginStatus == "loading" ? View.GONE : loginStatus == "login" ? View.GONE: View.VISIBLE}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPasswordLogin">

            <ImageView
                android:id="@+id/ivPasswordLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/password_title"
                app:srcCompat="@drawable/vc_password" />

            <EditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="Şifre giriniz"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/edit_text_login"
                tools:ignore="Autofill,HardcodedText,TextContrastCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/bg_login_button"
            android:onClick="@{() -> loginFragment.clickLoginButton(buttonLogin, editTextAccountLogin.getText().toString(), editTextPasswordLogin.getText().toString())}"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/login_button_text"
            android:textColor="@color/white"
            android:textSize="@dimen/login_button_text"
            android:visibility='@{loginStatus == "loading" ? View.GONE : loginStatus == "login" ? View.GONE: View.VISIBLE}'
            app:layout_constraintBottom_toTopOf="@+id/tvSignUpClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvSignUpClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:onClick="@{() -> loginFragment.clickTextView(tvSignUpClick)}"
            android:text="@string/sign_up_click_text"
            android:textAllCaps="false"
            android:textColor="@color/bg_login_button"
            android:textSize="@dimen/login_click_text"
            android:visibility='@{loginStatus == "loading" ? View.GONE : loginStatus == "login" ? View.GONE: View.VISIBLE}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:indeterminateTint="#F26A4B"
            android:visibility='@{loginStatus == "loading" ? View.GONE : loginStatus == "login" ? View.VISIBLE: View.GONE}'
            app:layout_constraintBottom_toTopOf="@+id/tvProgressLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvProgressLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_bar_text"
            android:textColor="@color/black"
            android:textSize="@dimen/progress_bar_text"
            android:visibility='@{loginStatus == "loading" ? View.GONE : loginStatus == "login" ? View.VISIBLE: View.GONE}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>